hicimos algo sobre layouts

--- a/Mi proyecto de vida/index.html
+++ b/Mi proyecto de vida/index.html
@@ -1,32 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>mi proyecto de vida</title>
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-
+    <title>Document</title>
 </head>
-<body>
- <nav class="nav nav-pills">
-     <a class="nav-link active" href="index.html">inicio</a>
-     <a class="nav-link"   href="info/Quien soy.html">quien soy</a>
-     <a class="nav-link"   href="info/feliz.html">5 cosas que me hacen feliz</a>
-     <a class="nav-link"   href="info/triste.html">5 cosas que me hacen enojar</a>
-     <a class="nav-link"   href="info/unico.html">que me hace unico</a>
-     <a class="nav-link"   href="info/virtudes.html">las virtudes</a>
-     <a class="nav-link" href="info/personalidad.html">test de la personalidad</a>
-     <a class="nav-link"   href="info/inteligencias.html">inteligencias multiples</a>
-     <a class="nav-link"   href="info/curso.html">curso</a>
-     <a class="nav-link"   href="info/metas.html">mis metas </a>
-     <a class="nav-link"   href="info/agradecimientos.html">agradecimientos</a>
-</nav>   
-<h1>Mi proyecto de vida</h1>
-
-
+<body> 
+    
 </body>
-
 </html>
